# projet_IA41

./: CMakeLists.txt
Ressources/Texture/: Token.xcf  board.xcf
app/IpseityProject/binary/1.2.2/win/: Ipseity.ini
app/IpseityProject/binary/1.2.2/win/data/CognitiveSystems/RasendeRoboter/: Supervisor-1308.cs.xml  Supervisor-PrologWired.cs.xml
app/IpseityProject/binary/1.2.2/win/data/Environments/RasendeRoboter/: RasendeRoboter.environment.xml
app/IpseityProject/binary/1.2.2/win/data/Scenarios/RasendeRoboter/Lauri Fabrice/IA41 2011-2012/: S00.xml  S02.xml  S03.xml  S05.xml  S06.xml  S08.xml  S12.xml  S13.xml  S15.xml
app/IpseityProject/data/CognitiveSystems/RasendeRoboter/: Supervisor-1303.cs.xml  Supervisor-1303.module.xml  Supervisor-1308.module.xml  Supervisor-IA41.cs.xml  Supervisor-IA41.module.xml  Supervisor-Prolog.module.xml
app/IpseityProject/data/CognitiveSystems/RasendeRoboter/prolog/IA41-P2014/03/: data.pl
app/IpseityProject/data/CognitiveSystems/RasendeRoboter/prolog/IA41-P2014/11/: decision.pl
app/IpseityProject/data/Scenarios/RasendeRoboter/Lauri Fabrice/IA41 2011-2012/: S01.xml  S04.xml  S07.xml  S09.xml  S10.xml  S11.xml  S14.xml  Scenarii.xml
app/IpseityProject/data/Workspaces/RasendeRoboter/vreerr/: settings.ini  stats_l.txt
include/: Board.hpp  BoardState.hpp  Case.hpp  Jeu.hpp  Power3State.hpp  ResourcesSingleton.hpp  move.hpp
include/GUI/Widget/: WGButton.hpp
include/GameState/: State.hpp  StateInGame.hpp  StateMenu.hpp  StateMenuColor.hpp
include/Manager/: InputManager.hpp
include/Tools/: Tools.hpp
src/: Board.cpp  BoardState.cpp  Jeu.cpp  Power3State.cpp  ResourcesSingleton.cpp
src/GUI/Widget/: WGButton.cpp
src/GameState/: State.cpp  StateInGame.cpp  StateMenu.cpp  StateMenuColor.cpp
src/Manager/: InputManager.cpp  StateManager.cpp
src/Tools/: Tools.cpp
(+7 files in other folders)
